--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ rand = "0.8.5"
 assert_cmd = "2.0.14"
 predicates = "3.1.0"
 scan_fmt = "0.2.6"
+chrono = "0.4.35"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
