--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ rand = "0.8.5"
 assert_cmd = "2.0.14"
 predicates = "3.1.0"
 scan_fmt = "0.2.6"
+serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4.37"
+serde_json = '1.0'
+bincode = "1.3.3"
