--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ serde_json = '1.0'
 bincode = "1.3.3"
 termimad = "0.29"
 crossterm = "0.27.0"
-cursive = "0.20.0"
+cursive = { version = "0.20.0", features = ["markdown"] }
