--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,14 @@ crossterm = "0.27.0"
 [dependencies.cursive]
 version = "0.20.0"
 default-features = false
+features = ["markdown"]
 
 [features]
-default = ["ncurses-backend"]
+
+default = ["ncurses-backend", "cursive/markdown"]
 ncurses-backend = ["cursive/ncurses-backend"]
 pancurses-backend = ["cursive/pancurses-backend"]
 termion-backend = ["cursive/termion-backend"]
 crossterm-backend = ["cursive/crossterm-backend"]
 blt-backend = ["cursive/blt-backend"]
+markdown = ["cursive/markdown"]
