--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = '1.0'
 bincode = "1.3.3"
 termimad = "0.29"
 crossterm = "0.27.0"
+dirs = "5.0.1"
 [dependencies.cursive]
 version = "0.20.0"
 default-features = false
