--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bincode = "1.3.3"
 termimad = "0.29"
 crossterm = "0.27.0"
 dirs = "5.0.1"
+rfd = "0.14.1"
 [dependencies.cursive]
 version = "0.20.0"
 default-features = false
