--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "notus"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0"
+description = "A simple terminal notes app"
+repository = "https://github.com/jamdotjar/notus"
+keywords = ["notes", "markdown"]
+categories = ["command-line-utilities", "text-editors"]
 
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
@@ -25,8 +28,7 @@ default-features = false
 features = ["markdown"]
 
 [features]
-
-default = ["pancurses-backend", "cursive/markdown"]
+default = ["crossterm-backend", "cursive/markdown"]
 # ncurses-backend = ["cursive/ncurses-backend"]
 pancurses-backend = ["cursive/pancurses-backend"]
 termion-backend = ["cursive/termion-backend"]
